Project

General

Profile

Actions

Bug #63364

open

MDS_CLIENT_OLDEST_TID: 15 clients failing to advance oldest client/flush tid

Added by Xiubo Li 6 months ago. Updated about 2 months ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Tags:
backport_processed
Backport:
quincy,reef,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client, MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Currently only the client requests will include the oldest_client_tid, and the MDS will use the oldest_client_tid to trim the completed request list. Just in case that after the APPs finish their work and then stop sending any new client request the MDS could make the completed request list large.

We need to update the oldest_client_tid anyway.


Related issues 4 (2 open2 closed)

Related to CephFS - Bug #61947: mds: enforce a limit on the size of a session in the sessionmapResolvedVenky Shankar

Actions
Copied to CephFS - Backport #63535: quincy: MDS_CLIENT_OLDEST_TID: 15 clients failing to advance oldest client/flush tidIn ProgressXiubo LiActions
Copied to CephFS - Backport #63536: reef: MDS_CLIENT_OLDEST_TID: 15 clients failing to advance oldest client/flush tidIn ProgressXiubo LiActions
Copied to CephFS - Backport #63551: pacific: MDS_CLIENT_OLDEST_TID: 15 clients failing to advance oldest client/flush tidRejectedXiubo LiActions
Actions #1

Updated by Xiubo Li 6 months ago

  • Related to Bug #61947: mds: enforce a limit on the size of a session in the sessionmap added
Actions #2

Updated by Xiubo Li 6 months ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 54259
Actions #3

Updated by Venky Shankar 6 months ago

  • Category set to Correctness/Safety
  • Target version set to v19.0.0
  • Backport set to quincy,reef
  • Component(FS) Client, MDS added
Actions #4

Updated by Venky Shankar 6 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot 6 months ago

  • Copied to Backport #63535: quincy: MDS_CLIENT_OLDEST_TID: 15 clients failing to advance oldest client/flush tid added
Actions #6

Updated by Backport Bot 6 months ago

  • Copied to Backport #63536: reef: MDS_CLIENT_OLDEST_TID: 15 clients failing to advance oldest client/flush tid added
Actions #7

Updated by Backport Bot 6 months ago

  • Tags set to backport_processed
Actions #8

Updated by Xiubo Li 6 months ago

  • Backport changed from quincy,reef to quincy,reef,pacific
Actions #9

Updated by Xiubo Li 6 months ago

  • Backport changed from quincy,reef,pacific to quincy,reef
Actions #10

Updated by Venky Shankar 6 months ago

  • Tags deleted (backport_processed)
  • Backport changed from quincy,reef to quincy,reef,pacific
Actions #11

Updated by Backport Bot 6 months ago

  • Copied to Backport #63551: pacific: MDS_CLIENT_OLDEST_TID: 15 clients failing to advance oldest client/flush tid added
Actions #12

Updated by Backport Bot 6 months ago

  • Tags set to backport_processed
Actions #14

Updated by Niklas Hambuechen about 2 months ago

Potentially related issue:

Actions

Also available in: Atom PDF