mds,client: update the oldest_client_tid via the renew caps

Update the oldest_client_tid via the session renew caps msg to
make sure that the MDSs won't pile up the completed request list
in a very large size.

Fixes: https://tracker.ceph.com/issues/63364
Signed-off-by: Xiubo Li <xiubli@redhat.com>
(cherry picked from commit 0cff6d5d487972a850e7c64b1e3b8ca283bf3c03)